--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,7 @@ body {
 .game-container {
   margin: 50px auto;
   display: grid;
-  grid-template-columns: repeat(4, auto);
+  grid-template-columns: repeat(6, auto);
   grid-gap: 10px;
   justify-content: center;
   perspective: 500px;
@@ -85,8 +85,11 @@ body {
 
 .card.matched .card-front .card-value {
   animation: dance 1s linear infinite 500ms;
+  width: 100%;!important;
 }
-
+img{
+  width: 100%;!important;
+}
 .card-back {
   background-color: black;
   border-color: #FF6D00;
@@ -202,9 +205,11 @@ body {
   }
 }
 
+
 @media (max-width: 600px) {
   .game-container {
-    grid-template-columns: repeat(2, auto)
+    grid-template-columns: repeat(3, auto);
+    grid-gap: 2px;
   }
 
   .game-info-container {
